force-app/main/default/objects/Typically_Worked_Hours__c/Typically_Worked_Hours__c.object-meta.xml
<CustomObject>
    <label>Typically Worked Hours</label>
    <nameField>
        <displayFormat>TWH-{0000000000}</displayFormat>
        <label>Typically Worked Hours Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Typically Worked Hourss</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>