force-app/main/default/objects/Typically_Worked_Hours__c/fields/First_Meal_End_Time__c.field-meta.xml
<CustomField>
    <fullName>First_Meal_End_Time__c</fullName>
    <label>First Meal End Time</label>
    <type>Time</type>
</CustomField>