force-app/main/default/objects/Typically_Worked_Hours__c/fields/First_Meal_Start_Time__c.field-meta.xml
<CustomField>
    <fullName>First_Meal_Start_Time__c</fullName>
    <label>First Meal Start Time</label>
    <type>Time</type>
</CustomField>