force-app/main/default/objects/Typically_Worked_Hours__c/fields/Second_Meal_Start_Time__c.field-meta.xml
<CustomField>
    <fullName>Second_Meal_Start_Time__c</fullName>
    <label>Second Meal Start Time</label>
    <type>Time</type>
</CustomField>