force-app/main/default/objects/Typically_Worked_Hours__c/fields/Time_Work_Started__c.field-meta.xml
<CustomField>
    <fullName>Time_Work_Started__c</fullName>
    <label>Time Work Started</label>
    <type>Time</type>
</CustomField>